...
    }

    var startingPoints = [
      currentDirectoryURL,
      bundleURL.deletingLastPathComponent(),
    ]
    if let repositoryRootPath = environment["ANIMACORE_REPOSITORY_ROOT"] {
      startingPoints.insert(URL(fileURLWithPath: repositoryRootPath), at: 0)
    }
    for startingPoint in startingPoints {
      guard
        let repositoryRoot = findRepositoryRoot(
          from: startingPoint,
...
